# Keyframe-Based-SLAM

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  example_receiver.py  localization.py  odometry.py  visual_odometry.rbl
c++_example/: CMakeLists.txt  example.cpp
include/lib/: Camera.hpp  KeyFrame.hpp  Map.hpp  MapPoint.hpp  Optimizers.hpp  Utils.hpp  Viewer.hpp  VisualOdometry.hpp  cameraRealSense.hpp  config.hpp  mutex.hpp  plot.hpp  vo.hpp
lib/: libpaho-mqtt3a.so.1.3.13  libpaho-mqtt3c.so.1.3.13  libpaho-mqttpp3.so.1  libpaho-mqttpp3.so.1.4.0  libraylib.so.5.5.0  libyaml-cpp.so.0.8.0
old/cpp/include/lib/: cameraManagement.hpp  config.hpp  defines.hpp
old/cpp/include/utils/: defines.hpp.in
old/cpp/src/: main.cpp
old/cpp/src/lib/: cameraRealSense.cpp  config.cpp  plot.cpp
old/cpp/src/telemetry/: communication.cpp
old/protobuffer/: .proto_sources.txt
old/python/: odometry.py
protobuffer/: CMakeLists.txt  compile.sh
python/: localization.py  odometry.py
resources/: config.yaml
src/: main.cpp
src/executable/: main.cpp
src/lib/: Camera.cpp  Map.cpp  Optimizers.cpp  Viewer.cpp  VisualOdometry.cpp  cameraRealSense.cpp  config.cpp  plot.cpp  vo.cpp
src/telemetry/: communication.cpp  communication.hpp  data.h
